Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23437

Item_func_json_objectagg::print is not implemented

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.5(EOL)
    • 10.5.7
    • JSON
    • None

    Description

      I see this in item_jsonfunc.cc:

      void Item_func_json_objectagg::print(String *str, enum_query_type query_type)
      {
      }
      

      If I understand the code correctly, this will break at least:

      • VIEW processing
      • EXPLAIN EXTENDED
      • etc

      Attachments

        Activity

          People

            holyfoot Alexey Botchkov
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.