MDEV-23437 Item_func_json_objectagg::print is not implemented.

Fix the Item_func_json_objectagg::fix_fields to save the orig_args.